# spruthub-mcp-server

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  run-stdio.sh  spruthub-mcp.service
docs/plans/: 2025-12-06-dedicated-tools-design.md  2025-12-06-dedicated-tools-implementation.md
src/: index.js
src/spruthub_mcp/: __init__.py  __main__.py  client.py  config.py  schema.py  server.py
src/spruthub_mcp/tools/: __init__.py  accessories.py  discovery.py  rooms.py  scenarios.py  system.py
src/tools/: controlAccessory.js  controlRoom.js  getAccessory.js  getLogs.js  getScenario.js  index.js  listAccessories.js  listRooms.js  listScenarios.js  runScenario.js
tests/: SpruthubMCPServer.test.js
tests/tools/: controlAccessory.test.js  controlRoom.test.js  getAccessory.test.js  getLogs.test.js  getScenario.test.js  listAccessories.test.js  listRooms.test.js  listScenarios.test.js  runScenario.test.js
