[project]
name = "spruthub-mcp"
version = "2.0.0"
description = "MCP server for controlling Sprut.hub smart home devices with dynamic JSON-RPC API discovery"
authors = [
    {name = "shady2k", email = "shady2k@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.3.2",
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "websockets>=14.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "starlette>=0.41.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.8.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
